Refactored RAPTOR data import: replaced RaptorQueryPort with RaptorRepositoryPort, introduced new RAPTOR domain models (RouteRaptor, StopRaptor, TripRaptor, TransferRaptor), added Redis-based caching configuration, and enhanced RaptorImportService with detailed stop/route processing and optimized mappings.